--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.4",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "sxai": "file:"
   }
 }
