--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "express-mysql-session": "^3.0.3",
     "express-session": "^1.18.0",
+    "json2csv": "^6.0.0-alpha.2",
     "mysql2": "^3.11.3",
     "sxai": "file:"
   }
